tests/compile-fail/bitflags_custom_bits.stderr
error[E0277]: the trait bound `MyInt: bitflags::traits::Primitive` is not satisfied
   --> tests/compile-fail/bitflags_custom_bits.rs:133:22
    |
133 |     struct Flags128: MyInt {
    |                      ^^^^^ unsatisfied trait bound
    |
help: the trait `bitflags::traits::Primitive` is not implemented for `MyInt`
   --> tests/compile-fail/bitflags_custom_bits.rs:27:1
    |
 27 | struct MyInt(u8);
    | ^^^^^^^^^^^^
    = help: the following other types implement trait `bitflags::traits::Primitive`:
              i128
              i16
              i32
              i64
              i8
              isize
              u128
              u16
            and $N others
note: required by a bound in `bitflags::__private::PublicFlags::Primitive`
   --> src/traits.rs
    |
    |     type Primitive: Primitive;
    |                     ^^^^^^^^^ required by this bound in `PublicFlags::Primitive`

error[E0277]: the trait bound `MyInt: [const] BitOr` is not satisfied
   --> tests/compile-fail/bitflags_custom_bits.rs:132:1
    |
132 | / bitflags! {
133 | |     struct Flags128: MyInt {
134 | |         const A = MyInt(0b0000_0001u8);
135 | |         const B = MyInt(0b0000_0010u8);
...   |
138 | | }
    | |_^
    |
    = note: this error originates in the macro `$crate::__impl_public_bitflags` which comes from the expansion of the macro `bitflags` (in Nightly builds, run with -Z macro-backtrace for more info)
help: make the `impl` of trait `BitOr` `const`
    |
 42 | impl const BitOr for MyInt {
    |      +++++

error[E0277]: the trait bound `MyInt: [const] PartialEq` is not satisfied
   --> tests/compile-fail/bitflags_custom_bits.rs:132:1
    |
132 | / bitflags! {
133 | |     struct Flags128: MyInt {
134 | |         const A = MyInt(0b0000_0001u8);
135 | |         const B = MyInt(0b0000_0010u8);
...   |
138 | | }
    | |_^
    |
    = note: this error originates in the macro `$crate::__impl_public_bitflags` which comes from the expansion of the macro `bitflags` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `MyInt: [const] BitAnd` is not satisfied
   --> tests/compile-fail/bitflags_custom_bits.rs:132:1
    |
132 | / bitflags! {
133 | |     struct Flags128: MyInt {
134 | |         const A = MyInt(0b0000_0001u8);
135 | |         const B = MyInt(0b0000_0010u8);
...   |
138 | | }
    | |_^
    |
    = note: this error originates in the macro `$crate::__impl_public_bitflags` which comes from the expansion of the macro `bitflags` (in Nightly builds, run with -Z macro-backtrace for more info)
help: make the `impl` of trait `BitAnd` `const`
    |
 34 | impl const BitAnd for MyInt {
    |      +++++

error[E0277]: the trait bound `MyInt: [const] PartialEq` is not satisfied
   --> tests/compile-fail/bitflags_custom_bits.rs:132:1
    |
132 | / bitflags! {
133 | |     struct Flags128: MyInt {
134 | |         const A = MyInt(0b0000_0001u8);
135 | |         const B = MyInt(0b0000_0010u8);
...   |
138 | | }
    | |_^
    |
    = note: this error originates in the macro `$crate::__impl_public_bitflags` which comes from the expansion of the macro `bitflags` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `MyInt: [const] BitOr` is not satisfied
   --> tests/compile-fail/bitflags_custom_bits.rs:132:1
    |
132 | / bitflags! {
133 | |     struct Flags128: MyInt {
134 | |         const A = MyInt(0b0000_0001u8);
135 | |         const B = MyInt(0b0000_0010u8);
...   |
138 | | }
    | |_^
    |
    = note: this error originates in the macro `$crate::__impl_public_bitflags` which comes from the expansion of the macro `bitflags` (in Nightly builds, run with -Z macro-backtrace for more info)
help: make the `impl` of trait `BitOr` `const`
    |
 42 | impl const BitOr for MyInt {
    |      +++++

error[E0277]: the trait bound `MyInt: [const] PartialEq` is not satisfied
   --> tests/compile-fail/bitflags_custom_bits.rs:132:1
    |
132 | / bitflags! {
133 | |     struct Flags128: MyInt {
134 | |         const A = MyInt(0b0000_0001u8);
135 | |         const B = MyInt(0b0000_0010u8);
...   |
138 | | }
    | |_^
    |
    = note: this error originates in the macro `$crate::__impl_public_bitflags` which comes from the expansion of the macro `bitflags` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `MyInt: [const] BitAnd` is not satisfied
   --> tests/compile-fail/bitflags_custom_bits.rs:132:1
    |
132 | / bitflags! {
133 | |     struct Flags128: MyInt {
134 | |         const A = MyInt(0b0000_0001u8);
135 | |         const B = MyInt(0b0000_0010u8);
...   |
138 | | }
    | |_^
    |
    = note: this error originates in the macro `$crate::__impl_public_bitflags` which comes from the expansion of the macro `bitflags` (in Nightly builds, run with -Z macro-backtrace for more info)
help: make the `impl` of trait `BitAnd` `const`
    |
 34 | impl const BitAnd for MyInt {
    |      +++++

error[E0277]: the trait bound `MyInt: [const] PartialEq` is not satisfied
   --> tests/compile-fail/bitflags_custom_bits.rs:132:1
    |
132 | / bitflags! {
133 | |     struct Flags128: MyInt {
134 | |         const A = MyInt(0b0000_0001u8);
135 | |         const B = MyInt(0b0000_0010u8);
...   |
138 | | }
    | |_^
    |
    = note: this error originates in the macro `$crate::__impl_public_bitflags` which comes from the expansion of the macro `bitflags` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `MyInt: [const] BitAnd` is not satisfied
   --> tests/compile-fail/bitflags_custom_bits.rs:132:1
    |
132 | / bitflags! {
133 | |     struct Flags128: MyInt {
134 | |         const A = MyInt(0b0000_0001u8);
135 | |         const B = MyInt(0b0000_0010u8);
...   |
138 | | }
    | |_^
    |
    = note: this error originates in the macro `$crate::__impl_public_bitflags` which comes from the expansion of the macro `bitflags` (in Nightly builds, run with -Z macro-backtrace for more info)
help: make the `impl` of trait `BitAnd` `const`
    |
 34 | impl const BitAnd for MyInt {
    |      +++++

error[E0277]: the trait bound `MyInt: [const] PartialEq` is not satisfied
   --> tests/compile-fail/bitflags_custom_bits.rs:132:1
    |
132 | / bitflags! {
133 | |     struct Flags128: MyInt {
134 | |         const A = MyInt(0b0000_0001u8);
135 | |         const B = MyInt(0b0000_0010u8);
...   |
138 | | }
    | |_^
    |
    = note: this error originates in the macro `$crate::__impl_public_bitflags` which comes from the expansion of the macro `bitflags` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `MyInt: [const] BitAnd` is not satisfied
   --> tests/compile-fail/bitflags_custom_bits.rs:132:1
    |
132 | / bitflags! {
133 | |     struct Flags128: MyInt {
134 | |         const A = MyInt(0b0000_0001u8);
135 | |         const B = MyInt(0b0000_0010u8);
...   |
138 | | }
    | |_^
    |
    = note: this error originates in the macro `$crate::__impl_public_bitflags` which comes from the expansion of the macro `bitflags` (in Nightly builds, run with -Z macro-backtrace for more info)
help: make the `impl` of trait `BitAnd` `const`
    |
 34 | impl const BitAnd for MyInt {
    |      +++++

error[E0277]: the trait bound `MyInt: [const] BitOr` is not satisfied
   --> tests/compile-fail/bitflags_custom_bits.rs:132:1
    |
132 | / bitflags! {
133 | |     struct Flags128: MyInt {
134 | |         const A = MyInt(0b0000_0001u8);
135 | |         const B = MyInt(0b0000_0010u8);
...   |
138 | | }
    | |_^
    |
    = note: this error originates in the macro `$crate::__impl_public_bitflags` which comes from the expansion of the macro `bitflags` (in Nightly builds, run with -Z macro-backtrace for more info)
help: make the `impl` of trait `BitOr` `const`
    |
 42 | impl const BitOr for MyInt {
    |      +++++

error[E0277]: the trait bound `MyInt: [const] Not` is not satisfied
   --> tests/compile-fail/bitflags_custom_bits.rs:132:1
    |
132 | / bitflags! {
133 | |     struct Flags128: MyInt {
134 | |         const A = MyInt(0b0000_0001u8);
135 | |         const B = MyInt(0b0000_0010u8);
...   |
138 | | }
    | |_^
    |
    = note: this error originates in the macro `$crate::__impl_public_bitflags` which comes from the expansion of the macro `bitflags` (in Nightly builds, run with -Z macro-backtrace for more info)
help: make the `impl` of trait `Not` `const`
    |
 76 | impl const Not for MyInt {
    |      +++++

error[E0277]: the trait bound `MyInt: [const] BitAnd` is not satisfied
   --> tests/compile-fail/bitflags_custom_bits.rs:132:1
    |
132 | / bitflags! {
133 | |     struct Flags128: MyInt {
134 | |         const A = MyInt(0b0000_0001u8);
135 | |         const B = MyInt(0b0000_0010u8);
...   |
138 | | }
    | |_^
    |
    = note: this error originates in the macro `$crate::__impl_public_bitflags` which comes from the expansion of the macro `bitflags` (in Nightly builds, run with -Z macro-backtrace for more info)
help: make the `impl` of trait `BitAnd` `const`
    |
 34 | impl const BitAnd for MyInt {
    |      +++++

error[E0277]: the trait bound `MyInt: [const] BitXor` is not satisfied
   --> tests/compile-fail/bitflags_custom_bits.rs:132:1
    |
132 | / bitflags! {
133 | |     struct Flags128: MyInt {
134 | |         const A = MyInt(0b0000_0001u8);
135 | |         const B = MyInt(0b0000_0010u8);
...   |
138 | | }
    | |_^
    |
    = note: this error originates in the macro `$crate::__impl_public_bitflags` which comes from the expansion of the macro `bitflags` (in Nightly builds, run with -Z macro-backtrace for more info)
help: make the `impl` of trait `BitXor` `const`
    |
 50 | impl const BitXor for MyInt {
    |      +++++

error[E0277]: the trait bound `MyInt: [const] Not` is not satisfied
   --> tests/compile-fail/bitflags_custom_bits.rs:132:1
    |
132 | / bitflags! {
133 | |     struct Flags128: MyInt {
134 | |         const A = MyInt(0b0000_0001u8);
135 | |         const B = MyInt(0b0000_0010u8);
...   |
138 | | }
    | |_^
    |
    = note: this error originates in the macro `$crate::__impl_public_bitflags` which comes from the expansion of the macro `bitflags` (in Nightly builds, run with -Z macro-backtrace for more info)
help: make the `impl` of trait `Not` `const`
    |
 76 | impl const Not for MyInt {
    |      +++++
